Fix wrong required diskspace calculation in some rare circumstances

BUG: 271097